Atualiza local, reestrutura cabeçalhos

--- a/index_en-US.html
+++ b/index_en-US.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="assets/css/estilo.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" defer></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/fira-code.min.css"> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/jetbrains-mono.min.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/fira-code.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/jetbrains-mono.min.css">
     <script type="text/javascript" src="assets/js/menu.js" defer></script>
     <script type="text/javascript" src="assets/js/lang.js" defer=""></script>
     <title>Juno Takano</title>
@@ -27,15 +27,24 @@
 
         <h2>Areas of interest</h2>
         <ul class="lista">
-            <li>Data analytics</li>
             <li>Back-end development</li>
-            <li>Software localization and documentation</li>
+            <li>DevOps / DevSecOps</li>
+            <li>Platform Engineering</li>
+        </ul>
+
+        <h2>Stack</h2>
+        <ul class="lista">
+            <li><strong>Languages:</strong> JavaScript, TypeScript, Python, Bash</li>
+            <li><strong>Back-end:</strong> Node.js, PostgreSQL, GraphQL, REST</li>
+            <li><strong>Ops:</strong> Git CI/CD, Docker, AWS, Cloud/Serverless</li>
         </ul>
 
         <h2>Education</h2>
+        <h3>Graduation</h3>
         <ul class="lista">
-            <li><strong>Graduation:</strong> Technology in Internet Systems Analysis <ul class="lista">
-                    <li>In progress, 2022 &rightarrow; 2024 &#160; <a href="https://bri.ifsp.edu.br/index.php/cursos-superiores/tecnologia-em-sistemas-para-internet">IFSP Birigui</a></li>
+            <li>Technology in Systems Analysis and Development<ul class="lista">
+                    <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">Federal Institute of São Paulo - Jacareí Campus</a></li>
+                    <li>In progress, 2022 &rightarrow; 2024</li>
                 </ul> </li>
         </ul>
 
@@ -43,7 +52,7 @@
         <ul class="lista">
             <li>
                 <a href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Google Data Analytics Professional Certificate</a>
-                <ul class="lista-hover">
+                <ul class="lista">
                     <li><a href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validate on Credly</a> &bullet; <a href="https://mdst-graphs.netlify.app/mdst_graphs.html">See case study</a></li>
                 </ul>
             </li>
@@ -70,8 +79,8 @@
             </ul>
             <li>2021</li>
             <ul>
-                <li><strong>DIO</strong> — <a class="texto-pequeno" href="https://www.dio.me/certificate/D3331470/share">Amdocs JAVA Developer Bootcamp</a></li>
-                <li><strong>Alura</strong> — <a class="texto-pequeno" href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Beginner Training in Programming</a></li>
+                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/D3331470/share">Amdocs JAVA Developer Bootcamp</a></li>
+                <li><strong>Alura</strong> &mdash; <a class="texto-pequeno" href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Beginner Training in Programming</a></li>
             </ul>
         </ul>
         
@@ -94,17 +103,17 @@
                 </ul> </li>
         </ul>
 
-        <h2>Projects</h2>
-        <ul class="lista">
-            <li><strong><a href="https://github.com/jultty/dataviz">dataviz</a></strong> - Data visualization projects</li>
-            <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> - API and research project on semantic relations between technical terms</li>
-            <li><strong><a href="https://semtec.netlify.app/">semtec-ext</a></strong> - Consumes semtec API Terms and searches for matches on a web page</li>
-                        <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Clean data for the Google Data Analytics Professional Certificate's Portuguese version.</li>
-        </ul>
-
         <h2>Languages</h2>
         <ul class="lista">
             <li><strong>English:</strong> Fluent - TOEIC Gold certification</li>
+        </ul>
+
+        <h2>Projects</h2>
+        <ul class="lista">
+            <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> - API and research project on semantic relations between technical terms</li>
+            <li><strong><a href="https://semtec.netlify.app/">semtec-ext</a></strong> - Consumes semtec API Terms and searches for matches on a web page</li>
+            <li><strong><a href="https://jultty.github.io/dataviz">dataviz</a></strong> - Data visualization projects</li>
+            <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Clean data for the Google Data Analytics Professional Certificate's Portuguese version.</li>
         </ul>
 
         <h2>Links</h2>
