Atualiza ano no rodapé

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="lang-notification"><p>This page is available in English.</p> <a href="index_en-US.html"><button id="lang-switch">Change language</button></a><button id="lang-dismiss">Dismiss</button></div>
 
     <main class="col">
-        <h1 id="2022-04-23">&gt; Juno Takano</h1>
+        <h1>&gt; Juno Takano</h1>
         <p class="tagline">Estudante de análise e desenvolvimento de sistemas</p>
 
         <h2>Áreas de interesse</h2>
@@ -143,7 +143,7 @@
     <nav id="nav-menu">
         <ul>
             <li><a href="https://github.com/jultty/jultty.github.io">Repositório</a></li>
-            <li>jultty &bullet; 2022</li>
+            <li>jultty &bullet; 2023</li>
             <li><a href="index_en-US.html">English</a></li>
         </ul>
     </nav>
