--- a/index_en-US.html
+++ b/index_en-US.html
@@ -22,7 +22,7 @@
     <div id="lang-notification"><p>Prefere ver essa página em Português?</p> <a href="index.html"><button id="lang-switch">Mudar idioma</button></a><button id="lang-dismiss">Fechar</button></div>
 
     <main class="col">
-        <h1 id="2022-04-23">&gt; Juno Takano</h1>
+        <h1>&gt; Juno Takano</h1>
         <p class="tagline">Systems Analysis and Development student</p>
 
         <h2>Areas of interest</h2>
@@ -134,7 +134,7 @@
     <nav id="nav-menu">
         <ul>
             <li><a href="https://github.com/jultty/jultty.github.io">Repository</a></li>
-            <li>jultty &bullet; 2022</li>
+            <li>jultty &bullet; 2023</li>
             <li><a href="index.html">Português</a></li>
         </ul>
     </nav>
