--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <h2>Stack</h2>
         <ul class="lista">
-            <li><strong>Linguagens:</strong> JavaScript, TypeScript, Python, Bash</li>
+            <li><strong>Linguagens:</strong> JavaScript, TypeScript, Python, SQL</li>
             <li><strong>Back-end:</strong> Node.js, PostgreSQL, GraphQL, REST</li>
-            <li><strong>Ops:</strong> Git CI/CD, Docker, AWS, Cloud/Serverless</li>
+            <li><strong>Ops:</strong> Git CI/CD, Docker, AWS</li>
         </ul>
 
         <h2>Formação</h2>
