Adiciona curso: SENAI TIC

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h2>Áreas de interesse</h2>
         <ul class="lista">
             <li>Desenvolvimento back-end</li>
-            <li>DevOps / DevSecOps</li>
-            <li>Engenharia de Plataforma</li>
+            <li>DevOps / DevSecOps e Engenharia de Plataforma</li>
+            <li>Cibersegurança e Infraestrutura de Redes</li>
         </ul>
 
         <h2>Stack</h2>
@@ -50,31 +50,16 @@
             </li>
         </ul>
 
-        <h3>Certificações</h3>
-        <ul class="lista">
-            <li>
-                <a href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Certificado Profissional de Análise de Dados do Google</a>
-                <ul class="lista">
-                    <li><a href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validar no Credly</a> &bullet; <a href="https://mdst-graphs.netlify.app/mdst_graphs.html">Ver estudo de caso</a></li>
-                </ul>
-            </li>
-        </ul>
-
         <h3>Cursos</h3>
         <ul class="lista">
+            <li>2023</li>
+            <ul>
+                <li><strong>SENAI</strong> &mdash; <a href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Competência Transversal: TIC</a></li>
+            </ul>
             <li>2022</li>
             <ul>
-                <li><strong>Coursera</strong>
-                    <ul>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/5342921febd336bf07db77305fb0f943">Projeto final de Análise de Dados: Estudo de caso</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/89a46e51fb748591a2edde980fda1d61">Análise de dados com programação em R</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/1d744fe7291dca25ead6ea35c229eba2">Compartilhar os dados com a arte da visualização</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/92350b44b7553283a7f609a51b0a197b">Analisar os dados para responder às perguntas</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Processar os dados para limpá-los</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/025f803df16ad53713774e5520c154fd">Preparar os Dados para Exploração</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/b140cf0127c4b5be01b6f2270dc42628">Fazer perguntas para tomar decisões com base em dados</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/ca517a01f3d6e355cda69e4e534367fe">Fundamentos: dados, dados, em todos os lugares</a>
-                    </ul>
+                <li>
+                    <strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Certificado Profissional de Análise de Dados do Google</a> <span class="texto-menor">(<a href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validar no Credly</a> &bullet; <a href="https://mdst-graphs.netlify.app/mdst_graphs.html">Ver estudo de caso</a>)</span>
                 </li>
                 <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
                 <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
