Atualiza stack, áreas de interesse

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <h2>Áreas de interesse</h2>
         <ul class="lista">
             <li>Desenvolvimento back-end</li>
-            <li>DevOps / DevSecOps e Engenharia de Plataforma</li>
+            <li>DevOps / DevSecOps (Engenharia de Plataforma)</li>
             <li>Cibersegurança e Infraestrutura de Redes</li>
         </ul>
 
         <h2>Stack</h2>
         <ul class="lista">
-            <li><strong>Linguagens:</strong> JavaScript, TypeScript, Python, SQL</li>
+            <li><strong>Linguagens:</strong> JavaScript, TypeScript, SQL, Bash</li>
             <li><strong>Back-end:</strong> Node.js, PostgreSQL, GraphQL, REST</li>
             <li><strong>Ops:</strong> Git CI/CD, Docker, AWS</li>
         </ul>
