Adiciona curso: Cisco CSE

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <ul class="lista">
             <li>2023</li>
             <ul>
+                <li><strong>Cisco</strong> &mdash; <a href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
                 <li><strong>SENAI</strong> &mdash; <a href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Competência Transversal: TIC</a></li>
             </ul>
             <li>2022</li>
@@ -107,7 +108,7 @@
             <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
             <li><strong><a href="https://semtec.netlify.app/extensao.html">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
             <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
-            <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Dados limpos para a versão em português do Certificado Profissional de Análise de Dados do Google.</li>
+            <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Dados limpos para a versão em português do Certificado Profissional de Análise de Dados do Google</li>
         </ul>
 
         <h2>Links</h2>
