Atualiza versão enUS e PDFs

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <ul class="lista">
             <li>2023</li>
             <ul>
-                <li><strong>Cisco</strong> &mdash; <a href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
-                <li><strong>SENAI</strong> &mdash; <a href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Competência Transversal: TIC</a></li>
+                <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
+                <li><strong>SENAI</strong> &mdash; <a class="texto-pequeno" href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Competência Transversal: TIC</a></li>
             </ul>
             <li>2022</li>
             <ul>
