--- a/index_en-US.html
+++ b/index_en-US.html
@@ -28,15 +28,15 @@
         <h2>Areas of interest</h2>
         <ul class="lista">
             <li>Back-end development</li>
-            <li>DevOps / DevSecOps</li>
-            <li>Platform Engineering</li>
+            <li>DevOps / DevSecOps (Platform Engineering)</li>
+            <li>Cybersecurity and Network Infrastructure</li>
         </ul>
 
         <h2>Stack</h2>
         <ul class="lista">
-            <li><strong>Languages:</strong> JavaScript, TypeScript, Python, Bash</li>
+            <li><strong>Languages:</strong> JavaScript, TypeScript, SQL, Bash</li>
             <li><strong>Back-end:</strong> Node.js, PostgreSQL, GraphQL, REST</li>
-            <li><strong>Ops:</strong> Git CI/CD, Docker, AWS, Cloud/Serverless</li>
+            <li><strong>Ops:</strong> Git CI/CD, Docker, AWS</li>
         </ul>
 
         <h2>Education</h2>
@@ -48,34 +48,25 @@
                 </ul> </li>
         </ul>
 
-        <h3>Certifications</h3>
-        <ul class="lista">
-            <li>
-                <a href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Google Data Analytics Professional Certificate</a>
-                <ul class="lista">
-                    <li><a href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validate on Credly</a> &bullet; <a href="https://mdst-graphs.netlify.app/mdst_graphs.html">See case study</a></li>
-                </ul>
-            </li>
         </ul>
 
         <h3>Courses</h3>
         <ul class="lista">
+            <li>2023</li>
+            <ul>
+                <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
+                <li><strong>SENAI</strong> &mdash; <a class="texto-pequeno" href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Transversal Competency: ICT</a></li>
+            </ul>
             <li>2022</li>
             <ul>
-                <li><strong>Coursera</strong>
-                    <ul>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/5342921febd336bf07db77305fb0f943">Google Data Analytics Capstone: Complete a Case Study</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/89a46e51fb748591a2edde980fda1d61">Data Analysis with R Programming</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/1d744fe7291dca25ead6ea35c229eba2">Share Data Through the Art of Visualization</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/92350b44b7553283a7f609a51b0a197b">Analyze Data to Answer Questions</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Process Data from Dirty to Clean</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/025f803df16ad53713774e5520c154fd">Prepare Data for Exploration</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/b140cf0127c4b5be01b6f2270dc42628">Ask Questions to Make Data-Driven Decisions</a></li>
-                        <li><a class="texto-pequeno" href="https://coursera.org/share/ca517a01f3d6e355cda69e4e534367fe">Foundations: Data, Data, Everywhere</a>
+                <li>
+                    <strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Google Data Analytics Professional Certificate</a>
+                    <ul class="lista">
+                        <li><a class="texto-menor" href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validate on Credly</a> &bullet; <a class="texto-menor" href="https://mdst-graphs.netlify.app/mdst_graphs.html">See case study</a></li>
                     </ul>
                 </li>
                 <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
-                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Avanade Decola Tech 3&ordf; Edition Bootcamp</a></li>
+                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Avanade Decola Tech 3rd Edition Bootcamp</a></li>
             </ul>
             <li>2021</li>
             <ul>
