Novo curso: Introduction to DevOps

--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
 
         <h2>Áreas de interesse</h2>
         <ul class="lista">
-            <li>Desenvolvimento back-end</li>
-            <li>DevOps / DevSecOps (Engenharia de Plataforma)</li>
+            <li>Desenvolvimento backend</li>
+            <li>DevOps / DevSecOps</li>
             <li>Cibersegurança e Infraestrutura de Redes</li>
         </ul>
 
         <h2>Formação</h2>
-        <h3>Graduação</h3>
         <ul class="lista">
             <li>Tecnologia em Análise e Desenvolvimento de Sistemas
                 <ul class="lista">
@@ -43,10 +42,48 @@
             </li>
         </ul>
 
-        <h3>Cursos</h3>
+        <h2>Experiência</h2>
+        <ul class="lista">
+            <li class="item-espacado"><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia
+                <ul>
+                    <li><strong>Tradutora e Desenvolvedora</strong></li>
+                    <li>Executo e implanto soluções para automação em processos de tradução, transcrição e legendagem</li>
+                </ul>
+            </li>
+            <li class="item-espacado"><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
+                <ul>
+                    <li><strong>Professora de Inglês</strong></li>
+                    <li>Planejamento e aplicação de aulas de inglês, recursos educacionais e atividades complementares</li>
+                </ul>
+            </li>
+            <li class="item-espacado"><strong>2012 &mdash; 2012</strong> Nossa Saúde Planos de Saúde
+                <ul>
+                    <li><strong>Digitadora</strong></li>
+                    <li>Inserção e validação de grandes volumes de dados em sistemas especializados</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h2>Idiomas</h2>
+        <ul class="lista">
+            <li><strong>Inglês:</strong> Fluente &mdash; Certificação TOEIC Gold</li>
+        </ul>
+
+        <h2>Projetos</h2>
+        <ul class="lista">
+            <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
+            <li><strong><a href="https://semtec.netlify.app/extensao.html">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
+            <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
+            <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Dados limpos para a versão em português do Certificado Profissional de Análise de Dados do Google</li>
+            <br/>
+            <li><em>Acesse meu <a href="https://github.com/jultty?tab=repositories">GitHub</a> para ver mais projetos</em></li>
+        </ul>
+
+        <h2>Cursos</h2>
         <ul class="lista">
             <li>2023</li>
             <ul>
+                <li><strong>IBM</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/d6c9f9f7-2743-4563-bde6-c2bd71b2090f">Introduction to DevOps</a></li>
                 <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
                 <li><strong>SENAI</strong> &mdash; <a class="texto-pequeno" href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Competência Transversal: TIC</a></li>
             </ul>
@@ -65,43 +102,11 @@
             </ul>
         </ul>
 
-        <h2>Experiência profissional</h2>
-        <ul class="lista">
-            <li class="item-espacado"><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia
-                <ul>
-                    <li><strong>Tradutora técnica:</strong> Tradução, transcrição e legendagem</li>
-                </ul>
-            </li>
-            <li class="item-espacado"><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
-                <ul>
-                    <li><strong>Professora de Inglês:</strong> Preparação e aplicação de aulas, exames e outras atividades pedagógicas</li>
-                </ul>
-            </li>
-            <li class="item-espacado"><strong>2012 &mdash; 2012</strong> Nossa Saúde Planos de Saúde
-                <ul>
-                    <li><strong>Digitadora:</strong> Inserção e validação de dados</li>
-                </ul>
-            </li>
-        </ul>
-
-        <h3>Palestras e minicursos</h3>
+        <h2>Palestras e eventos</h2>
         <ul class="lista">
             <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações
                 modernas, resilientes e escaláveis</a><br><strong class="texto-pequeno">IFSP Birigui</strong> &mdash; <span class="texto-pequeno">Semana da Informática</span></li>
             <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibliotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
-        </ul>
-
-        <h2>Idiomas</h2>
-        <ul class="lista">
-            <li><strong>Inglês:</strong> Fluente &mdash; Certificação TOEIC Gold</li>
-        </ul>
-
-        <h2>Projetos</h2>
-        <ul class="lista">
-            <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
-            <li><strong><a href="https://semtec.netlify.app/extensao.html">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
-            <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
-            <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Dados limpos para a versão em português do Certificado Profissional de Análise de Dados do Google</li>
         </ul>
 
         <h2>Links</h2>
