--- a/index_en-US.html
+++ b/index_en-US.html
@@ -47,6 +47,7 @@
         <ul class="lista">
             <li>2023</li>
             <ul>
+                <li><strong>IBM</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/d6c9f9f7-2743-4563-bde6-c2bd71b2090f">Introduction to DevOps</a></li>
                 <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
                 <li><strong>SENAI</strong> &mdash; <a class="texto-pequeno" href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Transversal Competency: ICT</a></li>
             </ul>
@@ -110,7 +111,7 @@
             <li><a href="assets/pdf/junoTakano_enUS.pdf">Download as PDF</a></li>
 
         </ul>
-    
+
     </main>
 
     <button id="nav-botao" class="nav-botao-fundo"><span class="fa fa-bars" aria-hidden="true" alt="Menu"></span></button>
