Adiciona apresentação, remove stack

--- a/index.html
+++ b/index.html
@@ -23,24 +23,19 @@
 
     <main class="col">
         <h1>&gt; Juno Takano</h1>
-        <p class="tagline">Estudante de análise e desenvolvimento de sistemas</p>
+        <p class="tagline">Tradutora, desenvolvedora e estudante de Análise de Sistemas</p>
 
-        <h2>Áreas de interesse</h2>
-        <ul class="lista">
-            <li>Desenvolvimento backend</li>
-            <li>DevOps / DevSecOps</li>
-            <li>Cibersegurança e Infraestrutura de Redes</li>
-        </ul>
-
-        <h2>Formação</h2>
-        <ul class="lista">
-            <li>Tecnologia em Análise e Desenvolvimento de Sistemas
-                <ul class="lista">
-                    <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">Instituto Federal de São Paulo - Campus Jacareí</a></li>
-                    <li>Em andamento, 2022 &rightarrow; 2024</li>
-                </ul>
-            </li>
-        </ul>
+        <h2>Apresentação</h2>
+        <div>
+            <p>Trabalho com automação de processos de tradução, transcrição e legendagem, desde a pesquisa à implantação, e da digitalização até a revisão final.</p>
+            <details>
+            <summary>Ler mais</summary>
+            <p>Em 2019 participei da fundação da NEWEN, uma pequena agência que atende várias demandas relacionadas a recursos multimídia e serviços textuais.</p>
+            <p>Manter nossa stack atualizada e obter conhecimento que agrega valor é uma das minhas principais atribuições.</p>
+            <p>Além disso, compartilho uma visão orientada a dados e ofereço suporte sobre como aproveitar o estado da arte entre as APIs de voz-para-texto (STT) e tradução de máquina disponíveis no mercado.</p>
+            <p>Ao longo desses 4 anos trabalhamos em diferentes níveis, desde projetos individuais, grandes e pequenas marcas até parcerias com outras agências de tradução.</p>
+            </details>
+        </div>
 
         <h2>Experiência</h2>
         <ul class="lista">
@@ -64,9 +59,14 @@
             </li>
         </ul>
 
-        <h2>Idiomas</h2>
+        <h2>Formação</h2>
         <ul class="lista">
-            <li><strong>Inglês:</strong> Fluente &mdash; Certificação TOEIC Gold</li>
+            <li>Tecnologia em Análise e Desenvolvimento de Sistemas
+                <ul class="lista">
+                    <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">Instituto Federal de São Paulo - Campus Jacareí</a></li>
+                    <li>Em andamento, 2022 &rightarrow; 2024</li>
+                </ul>
+            </li>
         </ul>
 
         <h2>Projetos</h2>
@@ -78,6 +78,7 @@
             <br/>
             <li><em>Acesse meu <a href="https://github.com/jultty?tab=repositories">GitHub</a> para ver mais projetos</em></li>
         </ul>
+
 
         <h2>Cursos</h2>
         <ul class="lista">
@@ -106,15 +107,20 @@
         <ul class="lista">
             <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações
                 modernas, resilientes e escaláveis</a><br><strong class="texto-pequeno">IFSP Birigui</strong> &mdash; <span class="texto-pequeno">Semana da Informática</span></li>
-            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibliotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
+                <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibliotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
+                </ul>
+
+        <h2>Idiomas</h2>
+        <ul class="lista">
+            <li><strong>Inglês:</strong> Fluente &mdash; Certificação TOEIC Gold</li>
         </ul>
 
-        <h2>Links</h2>
-        <ul class="lista">
-            <li><a href="https://github.com/jultty">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/jultty">LinkedIn</a></li>
-            <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
-            <li><a href="mailto:juno@newen.me">Email</a></li>
+                <h2>Links</h2>
+                <ul class="lista">
+                    <li><a href="https://github.com/jultty">GitHub</a></li>
+                    <li><a href="https://linkedin.com/in/jultty">LinkedIn</a></li>
+                    <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
+                    <li><a href="mailto:juno@newen.me">Email</a></li>
             <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
             <li><a href="assets/pdf/junoTakano_ptBR.pdf">Baixar PDF</a></li>
 
