--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h2>Apresentação</h2>
         <div>
-            <p>Trabalho com automação de processos de tradução, transcrição e legendagem, desde a pesquisa à implantação, e da digitalização até a revisão final.</p>
+            <p>Trabalho com automação de processos de tradução, transcrição e legendagem, da digitalização até a revisão final.</p>
             <details>
             <summary>Ler mais</summary>
             <p>Em 2019 participei da fundação da NEWEN, uma pequena agência que atende várias demandas relacionadas a recursos multimídia e serviços textuais.</p>
