--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
 
         <h2>Apresentação</h2>
         <div>
-            <p>Trabalho com automação de processos de tradução, transcrição e legendagem, da digitalização até a revisão final.</p>
+            <p>Trabalho com pesquisa, implantação, suporte e automação de processos de tradução, transcrição e legendagem, da digitalização até a revisão final. </p>
             <details>
             <summary>Ler mais</summary>
-            <p>Em 2019 participei da fundação da NEWEN, uma pequena agência que atende várias demandas relacionadas a recursos multimídia e serviços textuais.</p>
-            <p>Manter nossa stack atualizada e obter conhecimento que agrega valor é uma das minhas principais atribuições.</p>
-            <p>Além disso, compartilho uma visão orientada a dados e ofereço suporte sobre como aproveitar o estado da arte entre as APIs de voz-para-texto (STT) e tradução de máquina disponíveis no mercado.</p>
-            <p>Ao longo desses 4 anos trabalhamos em diferentes níveis, desde projetos individuais, grandes e pequenas marcas até parcerias com outras agências de tradução.</p>
+            <p>Venho da área de idiomas, onde comecei lecionando e traduzindo inglês. A experiência com ferramentas de tradução assistida foi onde consegui aplicar meus conhecimentos técnicos e transformá-los em soluções pela primeira vez.</p>
+            <p>Em 2019 participei da fundação da NEWEN, uma pequena agência que atende várias demandas relacionadas a recursos multilíngues e serviços textuais.</p>
+            <p>Manter nossa stack atualizada, obter conhecimento que agrega valor e dar suporte para que esse valor se multiplique é uma das minhas principais atribuições.</p>
+            <p>Além disso, compartilho uma visão orientada a dados e estou sempre aprendendo sobre como aproveitar o estado da arte entre as APIs de voz-para-texto (STT) e tradução de máquina disponíveis no mercado.</p>
+            <p>Ao longo desses 4 anos trabalhamos em diferentes níveis, desde projetos individuais, grandes e pequenas marcas até parcerias com outras agências de tradução. Seria um prazer trabalhar com você  também.</p>
             </details>
         </div>
 
@@ -91,7 +92,7 @@
             <li>2022</li>
             <ul>
                 <li>
-                    <strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Certificado Profissional de Análise de Dados do Google</a> <span class="texto-menor">(<a href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validar no Credly</a> &bullet; <a href="https://mdst-graphs.netlify.app/mdst_graphs.html">Ver estudo de caso</a>)</span>
+                    <strong>Google</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Certificado Profissional de Análise de Dados</a> 
                 </li>
                 <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
                 <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
@@ -119,9 +120,7 @@
                 <ul class="lista">
                     <li><a href="https://github.com/jultty">GitHub</a></li>
                     <li><a href="https://linkedin.com/in/jultty">LinkedIn</a></li>
-                    <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
                     <li><a href="mailto:juno@newen.me">Email</a></li>
-            <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
             <li><a href="assets/pdf/junoTakano_ptBR.pdf">Baixar PDF</a></li>
 
         </ul>
