--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
         <h2>Apresentação</h2>
         <div>
-            <p>Trabalho com pesquisa, implantação, suporte e automação de processos de tradução, transcrição e legendagem, da digitalização até a revisão final. </p>
+            <p>Atualmente em Jacareí, no Vale do  Paraíba, atuo na implantação, suporte e automação de processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final. </p>
             <details>
             <summary>Ler mais</summary>
             <p>Venho da área de idiomas, onde comecei lecionando e traduzindo inglês. A experiência com ferramentas de tradução assistida foi onde consegui aplicar meus conhecimentos técnicos e transformá-los em soluções pela primeira vez.</p>
             <p>Em 2019 participei da fundação da NEWEN, uma pequena agência que atende várias demandas relacionadas a recursos multilíngues e serviços textuais.</p>
             <p>Manter nossa stack atualizada, obter conhecimento que agrega valor e dar suporte para que esse valor se multiplique é uma das minhas principais atribuições.</p>
             <p>Além disso, compartilho uma visão orientada a dados e estou sempre aprendendo sobre como aproveitar o estado da arte entre as APIs de voz-para-texto (STT) e tradução de máquina disponíveis no mercado.</p>
-            <p>Ao longo desses 4 anos trabalhamos em diferentes níveis, desde projetos individuais, grandes e pequenas marcas até parcerias com outras agências de tradução. Seria um prazer trabalhar com você  também.</p>
+            <p>Ao longo desses 4 anos trabalhamos em diferentes níveis, desde projetos individuais, grandes e pequenas marcas até parcerias com outras agências de tradução. Se o seu projeto precisa de internacionalização, seria um prazer conhecê-lo também.</p>
             </details>
         </div>
 
